--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -298,6 +298,7 @@ a.thumbnail:hover {
 
   #content-wrapper{
     margin-bottom: 20px;
+    padding-top: 30px;
   }
 
 .proj-snippet{
